finished main logic for creating a review
